tests/paczka1/fuzzy1/98325445.err
Error in line 14: b98RN9k2 S627 99,7
Error in line 13: VMhp S345 93,1
Error in line 21: BnrQvP S627 87,3
Error in line 9: J1nx S627 49,0
Error in line 33: S627 A72 88,3
Error in line 26: JFU7Ucr S345 3,4
